# adventofcode2022

./: .gitignore  Cargo.toml  LICENSE
src/day01/: day01.rs
src/day02/: day02.rs
src/day03/: day03.rs
src/day04/: day04.rs
src/day05/: day05.rs
src/day06/: day06.rs
src/day07/: day07.rs
src/day08/: day08.rs
