[package]
name = "adventofcode2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day01"
path = "src/day01/bin/day01.rs"

[[bin]]
name = "day02"
path = "src/day02/bin/day02.rs"

[[bin]]
name = "day03"
path = "src/day03/bin/day03.rs"

[dependencies]
